--- a/src/locales/de/tokenomics.json
+++ b/src/locales/de/tokenomics.json
@@ -35,10 +35,10 @@
   "slices": {
     "pool": "Liquidität (Pool)",
     "presale": "Vorverkauf",
-    "burned": "Verbrannte Tokens",
+    "burned": "Verbrannte Token",
     "marketing": "Marketing",
     "dev": "Entwicklung",
-    "ecosystem": "MoonRise Ökosystem",
+    "ecosystem": "MoonRise-Ökosystem",
     "reserve": "Strategische Reserve",
     "founder": "Gründer"
   },
