--- a/src/locales/hi/transparencia.json
+++ b/src/locales/hi/transparencia.json
@@ -1,99 +1,99 @@
 {
   "title": "MoonRise पारदर्शिता",
-  "intro": "हर पंक्ति ऑडिटेबल है। वादा नहीं — सिर्फ डिलीवरी। नीचे ऑन-चेन प्रूफ के साथ कॉन्ट्रैक्ट, हैश और वॉलेट दिए गए हैं।",
+  "intro": "हर पंक्ति ऑडिटेबल है। वादे नहीं — केवल डिलीवरी। नीचे कॉन्ट्रैक्ट्स, हैश और वॉलेट्स हैं जिनकी ऑन-चेन प्रूफ है।",
 
   "protection": {
-    "summary": "MoonRise अर्थव्यवस्था को लॉजिक और कोड से सुरक्षित करता है। ऑपरेशंस सीमाओं का पालन करते हैं, कूलडाउन लगाते हैं, दुरुपयोग रोकते हैं और हर एक्शन को वास्तविक लिक्विडिटी में बदलते हैं — सब कुछ रियल-टाइम में दिखाई देता है।",
+    "summary": "MoonRise लॉजिक और कोड से अर्थव्यवस्था की रक्षा करता है। ऑपरेशंस सीमाओं का पालन करते हैं, कूलडाउन लगाते हैं, दुरुपयोग रोकते हैं और हर कार्रवाई को वास्तविक तरलता में बदलते हैं — सब कुछ रीयल-टाइम में दृश्य।",
     "internalEconomyTitle": "स्मार्ट आंतरिक अर्थव्यवस्था",
-    "internalEconomy": "इकोसिस्टम की हर मूवमेंट ऑटोमेटिकली लिक्विडिटी को फीड करती है। कुछ भी स्थिर नहीं: हर क्लिक सिस्टम को मजबूत करता है — स्वचालित, पारदर्शी और स्केलेबल।",
-    "badges": ["स्मार्ट लिक्विडिटी", "स्थिर चार्ट", "वास्तविक इकोसिस्टम", "डंप लॉक"]
+    "internalEconomy": "इकोसिस्टम की हर मूवमेंट अपने-आप लिक्विडिटी को फीड करती है। कुछ भी स्थिर नहीं: हर क्लिक सिस्टम को मजबूत करता है — स्वचालित, पारदर्शी और स्केलेबल।",
+    "badges": ["स्मार्ट लिक्विडिटी", "स्थिर चार्ट", "वास्तविक इकोसिस्टम", "डंप-लॉक"]
   },
 
   "dna": [
-    "✅ ओपन-सोर्स कोड और ऑडिटेबल कॉन्ट्रैक्ट — कोई भी BscScan पर वेरीफाई कर सकता है। ज़ीरो सेंट्रल कंट्रोल।",
-    "✅ मूवमेंट्स लिक्विडिटी जनरेट करते हैं — कोई बाहरी बैकिंग नहीं, आंतरिक संरचना प्रमाणित।",
-    "✅ 100% स्वतंत्र — बैंकों या बिचौलियों पर निर्भरता नहीं। कंट्रोल और निष्पादन स्मार्ट कॉन्ट्रैक्ट से।",
-    "✅ सक्रिय एंटी-व्हेल डिफेंस — संदिग्ध मूवमेंट को ब्लॉक कर होल्डर्स और चार्ट की रक्षा।"
+    "✅ ओपन-सोर्स कोड और ऑडिटेबल कॉन्ट्रैक्ट — कोई भी BscScan पर सत्यापित कर सकता है। शून्य केंद्रीकृत नियंत्रण।",
+    "✅ मूवमेंट लिक्विडिटी बनाते हैं — बाहरी बैकिंग नहीं, आंतरिक संरचना सिद्ध।",
+    "✅ 100% स्वतंत्र — बैंकों/मध्यस्थों पर निर्भर नहीं। नियंत्रण और निष्पादन स्मार्ट कॉन्ट्रैक्ट से।",
+    "✅ सक्रिय एंटी-व्हेल रक्षा — संदिग्ध मूवमेंट ब्लॉक होते हैं ताकि होल्डर्स और चार्ट सुरक्षित रहें।"
   ],
 
-  "proof_title": "🚀 वास्तविक और ऑडिटेबल प्रूफ",
-  "proof_intro": "हम भरोसा नहीं मांगते। निष्पादन ब्लॉकचेन पर रियल-टाइम में ट्रैसेबल है — कॉन्ट्रैक्ट, हैश और सार्वजनिक दस्तावेज।",
+  "proof_title": "🚀 वास्तविक और ऑडिटेबल प्रमाण",
+  "proof_intro": "हम भरोसा नहीं मांगते। निष्पादन ब्लॉकचेन पर रीयल-टाइम में ट्रेस किया जा सकता है — कॉन्ट्रैक्ट, हैश और सार्वजनिक दस्तावेज।",
   "proof": [
-    "🔥 डिप्लॉय पर 1.7B MRS की प्रारंभिक बर्न — BscScan पर सार्वजनिक हैश।",
-    "🧠 डायनेमिक सेल टैक्स (3.5% ↔ 7.0%) ऑन-चेन वॉल्यूम के अनुसार ऑटो-अडजस्ट।",
-    "🔐 संस्थापक का 1 वर्ष का टाइम-लॉक — समय से पहले कोई भी मूवमेंट कॉन्ट्रैक्ट द्वारा रिवर्ट।",
-    "🛠️ सार्वजनिक इन्फ्रास्ट्रक्चर — अपरिवर्तनीय आधिकारिक पते और ऑन-चेन सत्यापित नियम।"
+    "🔥 डिप्लॉय पर 1.7B MRS का प्रारंभिक बर्न — BscScan पर सार्वजनिक हैश।",
+    "🧠 डायनेमिक सेल-फीस (3.5% ↔ 7.0%) ऑन-चेन वॉल्यूम के अनुसार स्वतः समायोजित।",
+    "🔐 संस्थापक का 1 वर्ष का टाइम-लॉक — अवधि से पहले की कोई भी मूवमेंट कॉन्ट्रैक्ट द्वारा रिवर्ट।",
+    "🛠️ सार्वजनिक इन्फ्रास्ट्रक्चर — अपरिवर्तनीय आधिकारिक एड्रेस और सत्यापित ऑन-चेन नियम।"
   ],
 
   "governance": {
-    "title": "अस्थायी और पारदर्शी गवर्नेंस",
-    "intro": "प्रारंभिक चरण में दिखाई देने वाला और सीमित ओनर: ट्रेडिंग ऑन/पॉज़, इमरजेंसी ब्रेक ट्रिगर, और ऑन-चेन नियम फ्रीज़ करना।",
+    "title": "अस्थायी और पारदर्शी शासन",
+    "intro": "प्रारंभिक चरण में दृश्य और सीमित ओनर: ट्रेडिंग चालू/रोकना, इमरजेंसी ब्रेक लगाना और ऑन-चेन नियमों को फ्रीज़ करना।",
     "can": {
       "title": "ओनर क्या कर सकता है",
       "items": [
-        "जोखिम होने पर कॉन्ट्रैक्ट को पॉज़/रिज़्यूम करना।",
-        "राउटर कॉन्फ़िगर करना और ट्रेडिंग के लिए AMM पेयर्स मार्क करना।",
+        "जोखिम होने पर कॉन्ट्रैक्ट रोकना/फिर शुरू करना।",
+        "राउटर कॉन्फ़िगर करना और ट्रेडिंग के लिए AMM पेयर्स को मार्क करना।",
         "पब्लिक लिमिट्स के भीतर एंटी-बॉट/एंटी-डंप सुरक्षा समायोजित करना।",
-        "फ्रीज़ से पहले फीस/कूलडाउन छूट देना/हटाना।",
-        "कन्फ़िगरेशन (AMMs, छूट, पैरामीटर्स) फ्रीज़ करके उन्हें अपरिवर्तनीय बनाना।"
+        "फ्रीज़ से पहले फीस और कूलडाउन छूट देना/हटाना।",
+        "कॉन्फ़िगरेशन (AMMs, छूट, पैरामीटर) फ्रीज़ कर उन्हें अपरिवर्तनीय बनाना।"
       ]
     },
     "cannot": {
       "title": "ओनर क्या नहीं कर सकता",
       "items": [
-        "नए टोकन बनाना या सप्लाई बढ़ाना (कोई मिंट नहीं; केवल स्वैच्छिक बर्न)।",
-        "टाइम-लॉक से पहले फाउंडर वॉलेट को मूव करना या अवधि घटाना।",
+        "नए टोकन बनाना या सप्लाई बढ़ाना (मिंट नहीं; केवल स्वैच्छिक बर्न)।",
+        "टाइम-लॉक से पहले संस्थापक वॉलेट मूव करना या अवधि घटाना।",
         "मार्क किए गए AMM को अनमार्क करना या आधिकारिक वॉलेट बदलना (लिक्विडिटी, डेव, रिज़र्व आदि)।",
-        "टैक्स को मैन्युअल रूप से सेट करना — कॉन्ट्रैक्ट 3.5% से 7.0% के बीच स्वतः समायोजित करता है।",
-        "फ्रीज़ को उलटना या सुरक्षा सीमाओं को पार करना।"
+        "फीस को मैन्युअली सेट करना — कॉन्ट्रैक्ट खुद 3.5% से 7.0% के बीच समायोजित करता है।",
+        "फ्रीज़ हटाना या सुरक्षा सीमाओं से अधिक जाना।"
       ]
     }
   },
 
   "ops": {
     "title": "MoonRise ऑपरेशन",
-    "body": "ओपन कॉन्ट्रैक्ट। आधिकारिक वॉलेट। नियम बिना मैनुअल कंट्रोल के निष्पादित। हर महत्वपूर्ण एक्शन रियल-टाइम ऑन-चेन ट्रेस छोड़ता है।"
+    "body": "ओपन कॉन्ट्रैक्ट्स। आधिकारिक वॉलेट्स। नियम बिना मैन्युअल नियंत्रण के निष्पादित। हर महत्वपूर्ण कार्रवाई रीयल-टाइम ऑन-चेन ट्रेस छोड़ती है।"
   },
 
   "liquidity": {
-    "title": "लिक्विडिटी नीति और मार्केट डिफेंस",
+    "title": "लिक्विडिटी नीति और मार्केट रक्षा",
     "items": [
-      "कैलेंडर और पूर्व-परिभाषित नियमों के अनुसार लिक्विडिटी खोलना।",
-      "होल्डर्स और चार्ट की सुरक्षा हेतु कॉन्ट्रैक्ट में एंटी-व्हेल/एंटी-डंप मैकेनिज्म।",
-      "फीस और ऑपरेशंस ऑन-चेन (BscScan) पूरी पारदर्शिता के साथ।",
-      "MasterVault के माध्यम से स्थिरता फंड और स्वचालित ताले।"
+      "कैलेंडर और पूर्व-परिभाषित नियमों के अनुसार लिक्विडिटी खोली जाती है।",
+      "होल्डर्स और चार्ट की रक्षा हेतु कॉन्ट्रैक्ट में एंटी-व्हेल और एंटी-डंप मेकेनिज़्म।",
+      "फीस और ऑपरेशंस ऑन-चेन (BscScan) पूर्ण पारदर्शिता के साथ रिकॉर्ड।",
+      "स्टैबिलिटी फंड और MasterVault के माध्यम से स्वचालित लॉक।"
     ]
   },
 
   "release_schedule": {
     "title": "टोकन रिलीज़ शेड्यूल",
-    "total_prefix": "इस वॉलेट में अपेक्षित कुल:",
+    "total_prefix": "इस वॉलेट में नियोजित कुल:",
     "units": { "million": "मिलियन", "billion": "बिलियन", "token_suffix": "MRS" }
   },
 
   "lock_reason": {
     "title": "टोकन लॉक क्यों हैं?",
-    "paragraph_1": "लिक्विडिटी, मार्केटिंग, डेवलपमेंट, इकोसिस्टम और रिज़र्व के टोकन MasterVault में ऑटोमेटेड टाइमलॉक का पालन करते हैं। समय से पहले कुछ उपयोग नहीं होता।",
-    "paragraph_2": "MasterVault में केवल दो आपातकालीन ट्रेंच हैं — अंतिम लिक्विडिटी (350M) और अंतिम इकोसिस्टम (50M)। इन्हें केवल तभी समय से पहले जारी किया जा सकता है जब प्री-सेल 'sold out' मार्क हो (presaleSoldOut == true), प्रारंभिक लिस्टिंग या क्रिटिकल टेक सपोर्ट हेतु। सब कुछ ऑन-चेन रिकॉर्ड होता है.",
-    "paragraph_3": "कॉन्ट्रैक्ट सार्वजनिक, ऑडिटेबल और अपरिवर्तनीय है। हर लाइन को सीधे ब्लॉकचेन पर वेरीफाई करें।",
+    "paragraph_1": "लिक्विडिटी, मार्केटिंग, डेवलपमेंट, इकोसिस्टम और रिज़र्व टोकन MasterVault के स्वचालित टाइमलॉक्स का पालन करते हैं। समय से पहले कुछ उपयोग नहीं होता।",
+    "paragraph_2": "MasterVault में तीन आपातकालीन ट्रेंच हैं — अंतिम दो लिक्विडिटी के (400M + 400M, 05/12/2026 और 05/01/2027 के लिए) और अंतिम इकोसिस्टम का (50M, 05/03/2027)। इन्हें केवल तभी पहले जारी किया जा सकता है जब प्रीसेल को ‘sold out’ (presaleSoldOut == true) चिह्नित किया गया हो और सिर्फ अनलॉक तिथि से पहले, प्रारंभिक लिस्टिंग या महत्वपूर्ण तकनीकी सहायता हेतु। हर रिलीज़ ऑन-चेन दर्ज होती है।",
+    "paragraph_3": "कॉन्ट्रैक्ट सार्वजनिक, ऑडिटेबल और अपरिवर्तनीय है। हर पंक्ति ब्लॉकचेन पर सीधे जाँचें।",
     "button": "BscScan पर MasterVault कॉन्ट्रैक्ट देखें"
   },
 
-  "wallets_title": "प्रोजेक्ट के आधिकारिक वॉलेट",
-  "wallets_lead": "नीचे दिए पते MoonRise की सार्वजनिक इंफ्रास्ट्रक्चर बनाते हैं। ट्रेसबल, वेरिफाएबल और ब्लॉकचेन पर रियल-टाइम में दृश्य।",
+  "wallets_title": "परियोजना के आधिकारिक वॉलेट",
+  "wallets_lead": "नीचे दिए एड्रेस MoonRise की सार्वजनिक इन्फ्रास्ट्रक्चर बनाते हैं। ट्रेस-योग्य, सत्यापित करने योग्य और रीयल-टाइम में ऑन-चेन दृश्यमान।",
 
   "wallet_groups": {
     "operacao": "ऑपरेशन",
-    "crescimento": "वृद्धि",
+    "crescimento": "विकास",
     "estabilidade": "स्थिरता",
     "distribuicao": "प्रारंभिक संसाधन वितरण",
     "controle": "नियंत्रण"
   },
 
   "wallets": {
-    "ecossistema_presale": "इकोसिस्टम वॉलेट — प्री-सेल (62%)",
-    "liquidez_presale": "लिक्विडिटी वॉलेट — प्री-सेल (23%)",
-    "dev_init_ops": "प्रारंभिक ऑपरेशंस वॉलेट (15%)",
+    "ecossistema_presale": "इकोसिस्टम वॉलेट — प्रीसेल (62%)",
+    "liquidez_presale": "लिक्विडिटी वॉलेट — प्रीसेल (23%)",
+    "dev_init_ops": "प्रारंभिक संचालन वॉलेट (15%)",
 
     "liquidez": "लिक्विडिटी वॉलेट",
     "ecossistema": "इकोसिस्टम वॉलेट",
@@ -107,17 +107,17 @@
   },
 
   "wallets_desc": {
-    "ecossistema_presale": "इकोसिस्टम विस्तार हेतु प्री-सेल का 62%: RWA, ऐप और रणनीतिक इंटीग्रेशन।",
-    "liquidez_presale": "पूल बनाने, बाज़ार खोलने और लॉन्च पर चार्ट सुरक्षा हेतु प्री-सेल का 23%।",
-    "dev_init_ops": "प्रारंभिक बुनियादी खर्चों को कवर करने के लिए 15%: डेवलपमेंट, इन्फ्रास्ट्रक्चर, कंप्लायंस और शुरुआती डिलिवरी का समर्थन।",
+    "ecossistema_presale": "इकोसिस्टम विस्तार के लिए प्रीसेल का 62%: RWA, ऐप और रणनीतिक इंटीग्रेशन।",
+    "liquidez_presale": "मार्केट खोलने, पूल बनाने और शुरुआत में चार्ट को सुरक्षित करने हेतु प्रीसेल का 23%。",
+    "dev_init_ops": "शुरुआती मूल लागतों के लिए 15%: विकास, इन्फ्रास्ट्रक्चर, अनुपालन और प्रारंभिक डिलीवरी सपोर्ट।",
 
-    "liquidez": "सतत लिक्विडिटी: पूल मेंटेनेंस, ऑर्डरबुक गहराई और कीमत स्थिरता।",
-    "ecossistema": "MoonRise फ्रंट्स का प्रबंधन और मल्टी-बिज़नेस रणनीतिक ऑपरेशंस का निष्पादन।",
-    "desenvolvimento": "शोध, सुरक्षा और कोर मॉड्यूल — प्रदर्शन और स्केल पर फोकस।",
+    "liquidez": "निरंतर लिक्विडिटी: पूल मेंटेनेंस, ऑर्डर-बुक गहराई और मूल्य स्थिरता।",
+    "ecossistema": "MoonRise पहलों का प्रबंधन और रणनीतिक मल्टी-बिज़नेस ऑपरेशंस का निष्पादन।",
+    "desenvolvimento": "अनुसंधान, सुरक्षा और कोर मॉड्यूल — परफॉर्मेंस और स्केल पर केंद्रित।",
     "marketing": "अधिग्रहण और ब्रांड अथॉरिटी — ROI लक्ष्यों और वैश्विक वृद्धि के साथ।",
-    "reserva": "स्थिरता, बाज़ार झटकों और नियोजित विस्तार हेतु रणनीतिक रिज़र्व।",
+    "reserva": "स्थिरता, बाजार झटके और नियोजित विस्तार हेतु रणनीतिक रिज़र्व।",
     "fundador": "टोकन 1 वर्ष के लिए लॉक (टाइम-लॉक)। नियम के बाहर कोई मूवमेंट नहीं।",
-    "admin": "अस्थायी गवर्नेंस — कॉन्ट्रैक्ट में सार्वजनिक, ट्रैसेबल सीमाओं के साथ।"
+    "admin": "सार्वजनिक, ऑन-चेन ट्रैसेबल सीमाओं के साथ अस्थायी शासन।"
   },
 
   "wallets_notes": {
@@ -126,7 +126,7 @@
 
   "wallets_locked_note": "डिप्लॉय के बाद 1 वर्ष तक वॉलेट लॉक",
 
-  "docs_title": "📂 आधिकारिक दस्तावेज़ और कॉन्ट्रैक्ट",
+  "docs_title": "📂 आधिकारिक दस्तावेज और कॉन्ट्रैक्ट",
   "docs": {
     "token_label": "टोकन कॉन्ट्रैक्ट",
     "mastervault_label": "MasterVault कॉन्ट्रैक्ट"
@@ -136,7 +136,7 @@
   },
 
   "whitepaper": { "label": "Whitepaper पढ़ें" },
-  "disclaimer": { "trigger": "दायित्व अस्वीकरण देखें" },
+  "disclaimer": { "trigger": "अस्वीकरण देखें" },
 
   "aria": { "copy_address": "पता कॉपी करें" },
 
@@ -144,12 +144,12 @@
 
   "seo": {
     "meta_title": "MoonRise — ऑन-चेन पारदर्शिता",
-    "meta_description": "कॉन्ट्रैक्ट, वॉलेट और ऑन-चेन प्रूफ। वादा नहीं — सिर्फ डिलीवरी।"
+    "meta_description": "कॉन्ट्रैक्ट्स, वॉलेट्स और ऑन-चेन प्रूफ। वादे नहीं — सिर्फ डिलीवरी।"
   },
 
   "kpi": {
-    "wallets_hint": "सार्वजनिक, ऑडिटेबल पते",
+    "wallets_hint": "सार्वजनिक और ऑडिटेबल एड्रेस",
     "locked_hint": "टाइमलॉक वाले टोकन",
-    "schedule_hint": "अनुमानित योग"
+    "schedule_hint": "नियोजित योग"
   }
 }
