--- a/src/locales/pt/tokenomics.json
+++ b/src/locales/pt/tokenomics.json
@@ -40,7 +40,7 @@
     "dev": "Desenvolvimento",
     "ecosystem": "Ecossistema MoonRise",
     "reserve": "Reserva Estratégica",
-    "founder": "Fundador"
+    "founder": "Fundadores"
   },
 
   "kpis": {
