--- a/src/locales/ru/tokenomics.json
+++ b/src/locales/ru/tokenomics.json
@@ -31,16 +31,16 @@
   "badges": {
     "founderLock": "Токены заблокированы на 1 год"
   },
-
+  
   "slices": {
-    "pool": "Ликвидность (Pool)",
-    "presale": "Предпродажа",
+    "pool": "Ликвидность (пул)",
+    "presale": "Пресейл",
     "burned": "Сожжённые токены",
     "marketing": "Маркетинг",
     "dev": "Разработка",
     "ecosystem": "Экосистема MoonRise",
     "reserve": "Стратегический резерв",
-    "founder": "Основатель"
+    "founder": "Основатели"
   },
 
   "kpis": {
